SFDC Automation/src/objects/RSM_Remedy_HelpDesk__c.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Lessee Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Account</description>
        <inlineHelpText>Lookup field to the Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RSM Remedy HelpDesk</relationshipLabel>
        <relationshipName>RSM_Remedy_HelpDesk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignedToGroup__c</fullName>
        <label>AssignedToGroup</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedToIndividual__c</fullName>
        <label>AssignedToIndividual</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseID__c</fullName>
        <externalId>true</externalId>
        <label>Ticket Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosureCode__c</fullName>
        <label>ClosureCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateTime__c</fullName>
        <label>CreateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedTime_OriginalZone__c</fullName>
        <formula>IF(
	ISBLANK( CreateTime__c),
	&quot;&quot;,
	TEXT( CreateTime__c)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedTime_OriginalZone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <label>DateCreated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateModified__c</fullName>
        <label>DateModified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirmwareVersion__c</fullName>
        <label>FirmwareVersion</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPAddress__c</fullName>
        <label>IPAddress</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrismType__c</fullName>
        <label>PrismType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterID__c</fullName>
        <label>RequesterID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterName__c</fullName>
        <label>RequesterName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolvedTime__c</fullName>
        <label>ResolvedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>ServiceType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Duration__c</fullName>
        <formula>IF(Status__c ==&apos;Closed&apos;, (DATEVALUE(ResolvedTime__c)   -  DATEVALUE(CreateTime__c)) * 1440/1440, (TODAY()  -  DATEVALUE(CreateTime__c)) * 1440/1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>RSM Remedy HelpDesk</relationshipLabel>
        <relationshipName>RSM_Remedy_HelpDesk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VehicleNumber__c</fullName>
        <label>VehicleNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>RSM Remedy HelpDesk</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM Remedy HelpDesk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>